--- a/ConfigureAwaitEnforcer/ConfigureAwaitEnforcer.Vsix/ConfigureAwaitEnforcer.Vsix.csproj
+++ b/ConfigureAwaitEnforcer/ConfigureAwaitEnforcer.Vsix/ConfigureAwaitEnforcer.Vsix.csproj
@@ -14,10 +14,11 @@
     <UseCodebase>true</UseCodebase>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -45,9 +46,10 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;VSIX</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DeployExtension>True</DeployExtension>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <DebugType>pdbonly</DebugType>
@@ -63,19 +65,15 @@
     <StartArguments>/rootsuffix Roslyn</StartArguments>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="Key.snk" />
     <None Include="packages.config" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ConfigureAwaitEnforcer\ConfigureAwaitEnforcer.csproj">
-      <Project>{B1A2089A-4401-41DA-8B8E-00D40E502212}</Project>
-      <Name>ConfigureAwaitEnforcer</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
+    <Compile Include="..\ConfigureAwaitEnforcer\DiagnosticsSeverity.cs">
+      <Link>DiagnosticsSeverity.cs</Link>
+    </Compile>
     <Compile Include="ConfigureAwaitEnforcerOptions.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -178,6 +176,12 @@
       <MergeWithCTO>true</MergeWithCTO>
       <ManifestResourceName>VSPackage</ManifestResourceName>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ConfigureAwaitEnforcer\ConfigureAwaitEnforcer.csproj">
+      <Project>{b1a2089a-4401-41da-8b8e-00d40e502212}</Project>
+      <Name>ConfigureAwaitEnforcer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
