--- a/ConfigureAwaitEnforcer/ConfigureAwaitEnforcer/ConfigureAwaitEnforcer.csproj
+++ b/ConfigureAwaitEnforcer/ConfigureAwaitEnforcer/ConfigureAwaitEnforcer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard1.3</TargetFramework>
@@ -8,7 +8,7 @@
 
   <PropertyGroup>
     <PackageId>ConfigureAwaitEnforcer</PackageId>
-    <PackageVersion>1.0.0.0</PackageVersion>
+    <PackageVersion>1.1.0</PackageVersion>
     <Authors>René Stein</Authors>
     <PackageLicenseUrl>https://github.com/renestein/ConfigureAwaitEnforcer/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/renestein/ConfigureAwaitEnforcer</PackageProjectUrl>
