--- a/ConfigureAwaitEnforcer/ConfigureAwaitEnforcer/ConfigureAwaitEnforcer.csproj
+++ b/ConfigureAwaitEnforcer/ConfigureAwaitEnforcer/ConfigureAwaitEnforcer.csproj
@@ -8,7 +8,7 @@
 
   <PropertyGroup>
     <PackageId>ConfigureAwaitEnforcer</PackageId>
-    <PackageVersion>1.2.0</PackageVersion>
+    <PackageVersion>2.0.0-beta</PackageVersion>
     <Authors>René Stein</Authors>
     <PackageProjectUrl>https://github.com/renestein/ConfigureAwaitEnforcer</PackageProjectUrl>
     <PackageIconUrl></PackageIconUrl>
@@ -17,13 +17,13 @@
     <Description>Extension enforces the use of the ConfigureAwait expression.
 Visual studio extension is available here: https://marketplace.visualstudio.com/items?itemName=Rene-Stein.ConfigureAwaitEnforcer</Description>
     <PackageReleaseNotes></PackageReleaseNotes>
-    <Copyright>Copyright René Stein 2019</Copyright>
+    <Copyright>Copyright René Stein 2019-2020</Copyright>
     <PackageTags>Async, ConfigureAwaitEnforcer, Roslyn, Analyzers, Task, Tasks</PackageTags>
     <NoPackageAnalysis>true</NoPackageAnalysis>
     <Company>René Stein</Company>
     <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>rene-extensions.snk.pfx</AssemblyOriginatorKeyFile>
-    <Version>1.2.0</Version>
+    <Version>2.0.0</Version>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
@@ -33,7 +33,7 @@ Visual studio extension is available here: https://marketplace.visualstudio.com/
 
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.0.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.6.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="3.5.0" PrivateAssets="all" />
     <PackageReference Update="NETStandard.Library" PrivateAssets="all" />
   </ItemGroup>
 
